--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
     "cookie-session": "^2.0.0-beta.3",
@@ -23,7 +24,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-popper": "^1.3.2",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "stripe": "^6.25.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
