--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
     "customize-cra": "^0.2.12",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reqwest": "^2.0.5",
+    "video.js": "^7.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
