--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.4.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "react-infinite-scroller": "^1.2.4",
     "stripe": "^6.25.1"
   },
   "devDependencies": {
