--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "add": "^2.0.6",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "concurrently": "^4.1.0",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.4.0",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react-infinite-scroller": "^1.2.4",
