--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "cloudinary": "^1.13.2",
     "concurrently": "^4.1.0",
     "cookie-session": "^2.0.0-beta.3",
-    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.4.0",
     "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "react-infinite-scroller": "^1.2.4",
     "stripe": "^6.25.1"
   },
   "devDependencies": {
