--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "cloudinary": "^1.13.2",
     "concurrently": "^4.1.0",
     "cookie-session": "^2.0.0-beta.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.4.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
