--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "react-video-js-player": "^1.1.1",
     "stripe": "^6.25.1"
   },
   "devDependencies": {
