--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reqwest": "^2.0.5",
-    "video.js": "^7.4.1"
+    "video.js": "^7.4.1",
+    "webpack": "^4.19.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
