--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-stripe-checkout": "^2.6.3",
+    "reactjs-localstorage": "0.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reqwest": "^2.0.5",
